# wagtail-ninja

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
wagtail_ninja/: __init__.py  _django_ninja_patch.py  api.py  router.py  schema.py  typer.py
